--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -951,3 +951,11 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   note = {Accessed: 2017-04-15},
   year = 2017
 }
+
+@misc{data_map,
+  title = {Data.Map},
+  author = {Daan Leijen, Andriy Palamarchuk},
+  howpublished = {\url{https://hackage.haskell.org/package/containers-0.5.10.2/docs/Data-Map-Lazy.html}},
+  note = {Accessed: 2017-04-17},
+  year = 2017
+}
