--- a/doc/dissertation/resources/elucidation_requirements.tex
+++ b/doc/dissertation/resources/elucidation_requirements.tex
@@ -370,6 +370,7 @@ It must conform with the following set of requirements.\\
 
 \requirement{Extensibility}{Non-Functional}{
     The metacompiler should be designed in such a fashion that it can easily be extended in the future to accommodate further developments on the way to productisation. 
+    These developments may occur at the module level (e.g. additional verification steps), or at the program level, with the addition of new modules. 
     This means that it must be modular. 
 }
 
